Configured realistic ground pass formation and motion. Fixed DYMO IGMP packet bug. Added feature to allow role oracle to artificially increase the energy balance of a master,

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -15,6 +15,8 @@ network = Base
 #seed-set = ${runnumber} # this is the default
 
 *.roleOracle.updateFrequency = 5s
+*.roleOracle.overloadMaster = true
+*.roleOracle.targetMaster = 1
 
 # Random Numbers
 #
@@ -24,7 +26,7 @@ num-rngs = 3
 
 # Cluster Configuration
 #
-*.numMasters = ${NM=4}
+*.numMasters = ${NM=5}
 *.slavesPerMaster = ${SPM=2}
 *.numSlaves = ${NS=(${NM})*(${SPM})}
 *.slaveSeperation = ${SS=10deg}
@@ -84,8 +86,15 @@ num-rngs = 3
 *.node**.wlan[0].mac.slotPadding = ${SD}s * 0.1
 *.node**.wlan[0].mac.timeoutDuration = ${SD}s * 0.2
 *.nodeSlave**.wlan[0].mac.isSlave = true # Determines node behaviour mode
-*.nodeSlave**.wlan[0].mac.clusterId = ancestorIndex(2) % ${NM}
-*.nodeMaster**.wlan[0].mac.clusterId = ancestorIndex(2) 
+
+*.nodeSlave[0..1].wlan[0].mac.clusterId = 0
+*.nodeSlave[2..3].wlan[0].mac.clusterId = 1
+*.nodeSlave[4..5].wlan[0].mac.clusterId = 2
+*.nodeSlave[6..7].wlan[0].mac.clusterId = 3
+*.nodeSlave[8..9].wlan[0].mac.clusterId = 4
+*.nodeSlave[10..11].wlan[0].mac.clusterId = 5
+
+*.nodeMaster**.wlan[0].mac.clusterId = ancestorIndex(2)
 *.node**.wlan[0].mac.clusterId.param-record-as-scalar = true # Effects all
 *.node**.wlan[0].mac.slavesInCluster = ${SPM} # Used to let Master know how many messages to expect during uplink slot
 
@@ -93,31 +102,43 @@ num-rngs = 3
 #
 *.node**.wlan[0].radioType = "IdealRadio"
 *.node**.wlan[0].radio.radioMediumModule = "radioMedium[0]"
-*.node**.wlan[0].radio.displayCommunicationRange = true
+**.radio.displayCommunicationRange = true # Not Working
+
 # --- Transmitter / Receiver
 *.node**.wlan[0].radio.transmitter.bitrate = 2Mbps
 *.node**.wlan[0].radio.transmitter.preambleDuration = 0s
 *.node**.wlan[0].radio.transmitter.headerBitLength = 0b
-*.node**.wlan[0].radio.transmitter.detectionRange = 999m
+
 *.node**.wlan[0].radio.transmitter.interferenceRange = 0m
-*.nodeSlave**.wlan[0].radio.transmitter.communicationRange = 75m
-*.nodeMaster**.wlan[0].radio.transmitter.communicationRange = 225m
 *.node**.wlan[0].radio.receiver.ignoreInterference = true
+
+*.nodeSlave**.wlan[0].radio.transmitter.communicationRange = 50m
+*.nodeSlave**.wlan[0].radio.transmitter.detectionRange = 50m
+*.nodeMaster**.wlan[0].radio.transmitter.communicationRange = 125m
+*.nodeMaster**.wlan[0].radio.transmitter.detectionRange = 125m
 
 # Mobility
 #
-*.nodeMaster[*].mobilityType = "CircleMobility"
-*.nodeSlave[*].mobilityType = "CircleMobility"
-*.node**.cx = 500m
-*.node**.cy = 500m
-*.node**.cz = 10m
-*.nodeMaster**.r = 150m
-*.nodeMaster**.startAngle = parentIndex() * (360deg/${NM})
-#*.nodeMaster[0]**.startAngle = 0deg
-#*.nodeMaster[1]**.startAngle = 270deg
-#*.nodeMaster[2]**.startAngle = 180deg
-*.nodeSlave**.r = 200m
-*.nodeSlave**.startAngle = ((parentIndex() % ${NM})  * (360deg/${NM})) + (${SS} * floor(parentIndex() / ${NM})) - ((${SS} * (${SPM}-1)) * .5)
+# TODO Generalize if time
+*.node*a**.mobilityType = "LinearMobility"
+*.node**.initFromDisplayString = false
+*.node*a**.angle = 270deg
+*.node*a**.speed = 0mps # Calculated for realistic fly over
+
+*.nodeMaster[0..2]**.initialX = 500m - 50m
+*.nodeSlave[0..5]**.initialX = 500m - 50m - 25m
+
+*.nodeMaster[0..2]**.initialY = 550m + (parentIndex() * 100m) + 50m
+*.nodeSlave[0..5]**.initialY = 525m + (parentIndex() * 50m) + 50m
+
+*.nodeMaster**.initialZ = 100m
+*.nodeSlave**.initialZ = 100m
+
+*.nodeMaster[3..5]**.initialX = 500m + 50m
+*.nodeSlave[6..11]**.initialX = 500m + 50m + 25m
+
+*.nodeMaster[3..5]**.initialY = 600m + ((parentIndex() - 3) * 100m) + 50m
+*.nodeSlave[6..11]**.initialY = 575m + ((parentIndex() - 6) * 50m) + 50m
 
 # Results
 #
@@ -146,11 +167,11 @@ num-rngs = 3
 #**.vector-recording = true
 #**.result-recording-modes = all
 
-# Visualization - Multiple media messes up medium visualization
+# Visualization - Multiple media messes up medium visualization it seems
 # TODO: Examine visualizer documentation further
 #
-#*.visualizer.**.packetNameFilter = "UDP*"
-*.visualizer.**.packetNameFilter = "R*"
+*.visualizer.**.packetNameFilter = "UDP*"
+#*.visualizer.**.packetNameFilter = "R*"
 #*.visualizer.mobilityVisualizer.displayMovementTrail = true
 
 					#							#
@@ -203,8 +224,8 @@ extends = DYMO
 network = GroundStation # Ignore warning
 result-dir = ./results/ground_testing/
 
-**.physicalEnvironment**.config = xmldoc("walls.xml")
-**.radioMedium**.obstacleLossType = "IdealObstacleLoss"
+#**.physicalEnvironment**.config = xmldoc("walls.xml")
+#**.radioMedium**.obstacleLossType = "IdealObstacleLoss"
 
 *.nodeGround**.udpApp[0].typename = "UDPSink"
 **.udpApp[*].typename = "UDPBasicApp" # All non-Ground nodes with BasicApp
@@ -214,9 +235,13 @@ result-dir = ./results/ground_testing/
 
 #*.nodeGround**.mac.clusterId = ${NM} # 0..3 for masters 4 for ground 5 for slave uplink
 *.nodeGround**.radio.transmitter.communicationRange = 75m
-*.nodeGround**.mobilityType = "CircleMobility"
-*.nodeGround**.r = 85m
-*.nodeGround**.startAngle = 0deg
+*.nodeGround**.mobilityType = "LinearMobility"
+*.nodeGround**.initFromDisplayString = false
+*.nodeGround**.initialX = 500m
+*.nodeGround**.initialY = 500m
+*.nodeGround**.initialZ = 0m
+*.nodeGround**.angle = 0deg
+*.nodeGround**.speed = 0mps
 
 					#								#
 					# 			MultiNIC			#
@@ -225,8 +250,7 @@ result-dir = ./results/ground_testing/
 extends = GroundStation
 result-dir = ./results/multi_testing/
 
-*.nodeSlave**.numRadios = 2
-*.nodeMaster**.numRadios = 2
+*.node*a**.numRadios = 2
 
 # Static role selection
 *.nodeMaster[0].dymo.isGroundMaster = true
@@ -261,19 +285,20 @@ result-dir = ./results/multi_testing/
 *.nodeGround**.wlan[0].radio.radioMediumModule = "radioMedium[1]"
 *.nodeGround**.wlan[0].radio.transmitter.preambleDuration = 0s
 *.nodeGround**.wlan[0].radio.transmitter.headerBitLength = 0b
-*.nodeGround**.wlan[0].radio.transmitter.detectionRange = 999m
 *.nodeGround**.wlan[0].radio.transmitter.interferenceRange = 0m
-*.nodeGround**.wlan[0].radio.transmitter.communicationRange = 75m # Should be enough only to talk to closest master
 *.nodeGround**.wlan[0].radio.receiver.ignoreInterference = true
+
+*.nodeGround**.wlan[0].radio.transmitter.communicationRange = 150m # Should be enough only to talk to closest master
+*.nodeGround**.wlan[0].radio.transmitter.detectionRange = 150m
 
 *.node**.wlan[1].radio.radioMediumModule = "radioMedium[1]"
 *.node**.wlan[1].radio.transmitter.preambleDuration = 0s
 *.node**.wlan[1].radio.transmitter.headerBitLength = 0b
-*.node**.wlan[1].radio.transmitter.detectionRange = 999m
 *.node**.wlan[1].radio.transmitter.interferenceRange = 0m
-*.nodeSlave**.wlan[1].radio.transmitter.communicationRange = 75m
-*.nodeMaster**.wlan[1].radio.transmitter.communicationRange = 225m
 *.node**.wlan[1].radio.receiver.ignoreInterference = true
+
+*.node**.wlan[1].radio.transmitter.communicationRange = 150m
+*.node**.wlan[1].radio.transmitter.detectionRange = 150m
 
 					#											#
 					#			OrbitingGroundStation			#
@@ -281,13 +306,13 @@ result-dir = ./results/multi_testing/
 
 [Config Orbiting]
 extends = MultiNIC
-**nodeMaster**.speed = 1.125mps * 4
-**nodeSlave**.speed = 1.5mps * 4
+*.node*a**.speed = 1.5mps # Calculated for realistic fly over
 
 					#									#
 					#			EnergyModelling			#
 					#									#
 
+# VITAL: Must differential between master, slave and S2G
 [Config EnergyModelling]
 extends = Orbiting
 
@@ -314,7 +339,7 @@ extends = EnergyModelling
 *.node*a**.wlan[0].mac.bitrate = 2Mbps
 *.node*a**.wlan[0].mac.headerLength = 32B
 *.node*a**.wlan[0].mac.useMACAcks = false
-*.node*a**.wlan[0].mac.mtu = 9999999
+*.node*a**.wlan[0].mac.mtu = 9999999 # Ignore error
 
 [Config TDMA]
 extends = EnergyModelling
