Added time and energy role oracle decision making. Added movement wrap around for formation.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -14,9 +14,11 @@ network = Base
 #repeat = 0
 #seed-set = ${runnumber} # this is the default
 
-*.roleOracle.updateFrequency = 5s
-*.roleOracle.overloadMaster = true
-*.roleOracle.targetMaster = 1
+*.roleOracle.updateFrequency = 5s # May need to increase
+#*.roleOracle.overloadMaster = true
+#*.roleOracle.targetMaster = 1
+*.roleOracle.useEnergies = true
+*.roleOracle.energyRankWeight = ${0.1..1.0 step 0.1}
 
 # Random Numbers
 #
@@ -63,8 +65,8 @@ num-rngs = 3
 **.udpApp[*].messageLength.param-record-as-scalar = true
 #*.nodeSlave**.udpApp[*].sendInterval = 3s
 #*.nodeMaster**.udpApp[*].sendInterval = 2s
-**.udpApp[*].sendInterval = 1s
-**.udpApp[*].startTime = 0s
+**.udpApp[*].sendInterval = 10s
+**.udpApp[*].startTime = 0s # Time of first packet
 #*.nodeSlave**.udpApp[*].stopTime = 4s
 #*.nodeMaster**.udpApp[*].stopTime = 4s
 #**.udpApp[*].stopTime = 10s
@@ -128,8 +130,12 @@ num-rngs = 3
 *.nodeMaster[0..2]**.initialX = 500m - 50m
 *.nodeSlave[0..5]**.initialX = 500m - 50m - 25m
 
-*.nodeMaster[0..2]**.initialY = 550m + (parentIndex() * 100m) + 50m
-*.nodeSlave[0..5]**.initialY = 525m + (parentIndex() * 50m) + 50m
+*.nodeMaster[0..2]**.initialY = 600m + (parentIndex() * 100m)
+*.nodeSlave[0..5]**.initialY = 575m + (parentIndex() * 50m)
+*.nodeMaster[0..2]**.constraintAreaMaxY = 600m + (parentIndex() * 100m)
+*.nodeSlave[0..5]**.constraintAreaMaxY = 575m + (parentIndex() * 50m)
+*.nodeMaster[0..2]**.constraintAreaMinY = 600m + (parentIndex() * 100m) - 400m
+*.nodeSlave[0..5]**.constraintAreaMinY = 575m + (parentIndex() * 50m) - 400m
 
 *.nodeMaster**.initialZ = 100m
 *.nodeSlave**.initialZ = 100m
@@ -137,8 +143,12 @@ num-rngs = 3
 *.nodeMaster[3..5]**.initialX = 500m + 50m
 *.nodeSlave[6..11]**.initialX = 500m + 50m + 25m
 
-*.nodeMaster[3..5]**.initialY = 600m + ((parentIndex() - 3) * 100m) + 50m
-*.nodeSlave[6..11]**.initialY = 575m + ((parentIndex() - 6) * 50m) + 50m
+*.nodeMaster[3..5]**.initialY = 650m + ((parentIndex() - 3) * 100m)
+*.nodeSlave[6..11]**.initialY = 625m + ((parentIndex() - 6) * 50m)
+*.nodeMaster[3..5]**.constraintAreaMaxY = 650m + ((parentIndex() - 3) * 100m)
+*.nodeSlave[6..11]**.constraintAreaMaxY = 625m + ((parentIndex() - 6) * 50m)
+*.nodeMaster[3..5]**.constraintAreaMinY = 650m + ((parentIndex() - 3) * 100m) - 400m
+*.nodeSlave[6..11]**.constraintAreaMinY = 625m + ((parentIndex() - 6) * 50m) - 400m
 
 # Results
 #
@@ -202,7 +212,7 @@ extends = Clusters
 **.dymo.maxIdleTime = 200s # 200s MAX_IDLETIME
 **.dymo.maxSequenceNumberLifetime = 300s # 300s Used to calculate default route expiration times
 # "RREQ not received within RREQ_WAIT_TIME, RREQ_Gen may retry the Route Discovery by generating another RREQ."
-**.dymo.routeRREQWaitTime =	2s # 2s ROUTE_RREQ_WAIT_TIME
+**.dymo.routeRREQWaitTime =	5s # 2s ROUTE_RREQ_WAIT_TIME
 **.dymo.rreqHolddownTime = 5s # 10s double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
 **.dymo.maxHopCount	= 20 # 20 3. DYMO parameter group #
 **.dymo.discoveryAttemptsMax = 3 # 3 string MAX_METRIC = default(""); double MAXTIME;
@@ -211,7 +221,8 @@ extends = Clusters
 **.dymo.bufferSizeBytes	= -1B # -1B BUFFER_SIZE_BYTES double CONTROL_TRAFFIC_LIMIT
 **.dymo.maxJitter = 10ms # 10ms DYMO extension parameters - Sampling uniform to get send delay for RteMsgs
 **.dymo.sendIntermediateRREP = true # true
-**.dymo.minHopLimit	= 5	# 5
+
+**.dymo.minHopLimit	= 2	# 5 
 **.dymo.maxHopLimit	= 10 # 10
 
 					#									#
