Added packet generation based on exponential distribution. Made several CubeMac energy saving features optional (potentiall broken). Configured scenarios. Re-factored configurations. A possible bug exists within the oracle.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -6,40 +6,37 @@
 # TODO: Seperate ini files
 [Config Clusters]
 network = Base
-#sim-time-limit = 5s
-#sim-time-limit = 20s
-#sim-time-limit.param-record-as-scalar = true
 
-# TODO: Multiple run repitions
-#repeat = 0
-#seed-set = ${runnumber} # this is the default
-
-*.roleOracle.updateFrequency = 5s # May need to increase
-#*.roleOracle.overloadMaster = true
-#*.roleOracle.targetMaster = 1
-*.roleOracle.useEnergies = true
-*.roleOracle.energyRankWeight = ${0.1..1.0 step 0.1}
-
-# Random Numbers
+# --- Random Numbers
 #
 num-rngs = 3
 **.mobility.rng-0 = 1
 **.wlan[*].mac.rng-0 = 2
 
-# Cluster Configuration
+# --- Multiple run repitions
+#repeat = 0
+#seed-set = ${runnumber} # this is the default
+
+# --- Oracle
+#
+*.roleOracle.updateFrequency = 5s # May need to increase
+#*.roleOracle.overloadMaster = true
+#*.roleOracle.targetMaster = 1
+
+# --- Cluster Configuration
 #
 *.numMasters = ${NM=5}
 *.slavesPerMaster = ${SPM=2}
 *.numSlaves = ${NS=(${NM})*(${SPM})}
 *.slaveSeperation = ${SS=10deg}
 
-# Network & Routing
+# --- Network & Routing
 #
 # IPv4NetworkLayer
 **.networkLayer.arpType = "GlobalARP"
 **.networkLayer.proxyARP = true
 
-# Medium
+# --- Radio Medium
 #
 *.radioMediumType = "IdealRadioMedium"
 *.radioMedium[*].rangeFilter = "communicationRange"
@@ -50,40 +47,34 @@ num-rngs = 3
 *.radioMedium[*].propagationType = "ConstantTimePropagation" # Doesn't affect transmission durations which is bits/bitrate
 *.radioMedium[*].**.propagationTime = 0s
 
-# Applications
+# --- Applications
 #
 *.node**.numUdpApps = 1
 *.nodeMaster[0].udpApp[*].typename = "UDPSink"
 *.node**.udpApp[*].typename = "UDPBasicApp" # All nodes which are not Master[0]
-# --- Sink
+# Sink
 **.udpApp[*].localPort = 5000
-# --- BasicApp
+# BasicApp
 **.udpApp[*].destAddresses = "nodeMaster[0]"
 **.udpApp[*].packetName = "UDP" + substringBefore(substringAfter(fullPath(), ".node"), ".udp")
 **.udpApp[*].destPort = 5000
 **.udpApp[*].messageLength = ${ML = 128}B
-**.udpApp[*].messageLength.param-record-as-scalar = true
-#*.nodeSlave**.udpApp[*].sendInterval = 3s
-#*.nodeMaster**.udpApp[*].sendInterval = 2s
-**.udpApp[*].sendInterval = 10s
+#**.udpApp[*].sendInterval = exponential(1s)
+**.udpApp[*].sendInterval  = 60s
 **.udpApp[*].startTime = 0s # Time of first packet
-#*.nodeSlave**.udpApp[*].stopTime = 4s
-#*.nodeMaster**.udpApp[*].stopTime = 4s
-#**.udpApp[*].stopTime = 10s
 
-# NIC --- S2S---
+# --- NIC -> S2S
 #
 *.node**.wlan[0].typename = "WirelessNic"
-# --- MAC
+# MAC
 *.node**.wlan[0].macType = "CubeMacLayer"
 *.node**.wlan[0].mac.address = "auto"
 *.node**.wlan[0].mac.bitrate = 2Mbps
 *.node**.wlan[0].mac.slotDuration = ${SD = 0.1}s
-*.node**.wlan[0].mac.slotDuration.param-record-as-scalar = true
 *.node**.wlan[0].mac.headerLength = 1B # Cannot be 0b
 *.node**.wlan[0].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
 *.node**.wlan[0].mac.numSlots = (${NM})+1 # +1 for the uplink slot
-*.node**.wlan[0].mac.queueLength = 999
+*.node**.wlan[0].mac.queueLength = 999 # ~ Infitine considering current performance
 *.node**.wlan[0].mac.startTime = 0s
 *.node**.wlan[0].mac.slotPadding = ${SD}s * 0.1
 *.node**.wlan[0].mac.timeoutDuration = ${SD}s * 0.2
@@ -97,16 +88,14 @@ num-rngs = 3
 *.nodeSlave[10..11].wlan[0].mac.clusterId = 5
 
 *.nodeMaster**.wlan[0].mac.clusterId = ancestorIndex(2)
-*.node**.wlan[0].mac.clusterId.param-record-as-scalar = true # Effects all
 *.node**.wlan[0].mac.slavesInCluster = ${SPM} # Used to let Master know how many messages to expect during uplink slot
 
-# Radio 
+# --- Radio 
 #
 *.node**.wlan[0].radioType = "IdealRadio"
 *.node**.wlan[0].radio.radioMediumModule = "radioMedium[0]"
 **.radio.displayCommunicationRange = true # Not Working
-
-# --- Transmitter / Receiver
+# Transmitter / Receiver
 *.node**.wlan[0].radio.transmitter.bitrate = 2Mbps
 *.node**.wlan[0].radio.transmitter.preambleDuration = 0s
 *.node**.wlan[0].radio.transmitter.headerBitLength = 0b
@@ -150,35 +139,35 @@ num-rngs = 3
 *.nodeMaster[3..5]**.constraintAreaMinY = 650m + ((parentIndex() - 3) * 100m) - 400m
 *.nodeSlave[6..11]**.constraintAreaMinY = 625m + ((parentIndex() - 6) * 50m) - 400m
 
-# Results
+# --- Results
 #
-**.lo.**.scalar-recording = false
-**.arp.**.scalar-recording = false
-**.arp.**.vector-recording = false
-**.udp.**.scalar-recording = false
-**.udp.**.vector-recording = false
-**.radio.**.scalar-recording = false
-**.radio.**.vector-recording = false
-**.radioMedium.**.scalar-recording = false
-**.radioMedium.**.vector-recording = false
+#**.lo.**.scalar-recording = false
+#**.arp.**.scalar-recording = false
+#**.arp.**.vector-recording = false
+#**.udp.**.scalar-recording = false
+#**.udp.**.vector-recording = false
+#**.radio.**.scalar-recording = false
+#**.radio.**.vector-recording = false
+#**.radioMedium.**.scalar-recording = false
+#**.radioMedium.**.vector-recording = false
+#
+#**.energyStorage.residualCapacity.vector-recording = true
+#**.udpApp[*].endToEndDelay.scalar-recording = true
+#**.udpApp[*].rcvdPk.vector-recording = true
+#**.udpApp[*].rcvdPk.scalar-recording = true
+#**.udpApp[*].rcvdPk.statistic-recording = true
+#**.udpApp[*].sentPk.vector-recording = true
+#**.udpApp[*].sentPk.scalar-recording = true
+#**.udpApp[*].throughput.scalar-recording = true
+#**.mac."MAC Access Delay".vector-recording = true
 
-**.energyStorage.residualCapacity.vector-recording = true
-**.udpApp[*].endToEndDelay.scalar-recording = true
-**.udpApp[*].rcvdPk.vector-recording = true
-**.udpApp[*].rcvdPk.scalar-recording = true
-**.udpApp[*].rcvdPk.statistic-recording = true
-**.udpApp[*].sentPk.vector-recording = true
-**.udpApp[*].sentPk.scalar-recording = true
-**.udpApp[*].throughput.scalar-recording = true
-**.mac."MAC Access Delay".vector-recording = true
 # Everything on
-#**.statistic-recording = true
-#**.scalar-recording = true
-#**.vector-recording = true
-#**.result-recording-modes = all
+**.statistic-recording = true
+**.scalar-recording = true
+**.vector-recording = true
+**.result-recording-modes = all
 
-# Visualization - Multiple media messes up medium visualization it seems
-# TODO: Examine visualizer documentation further
+# --- Visualization
 #
 *.visualizer.**.packetNameFilter = "UDP*"
 #*.visualizer.**.packetNameFilter = "R*"
@@ -203,25 +192,22 @@ extends = Clusters
 **.configurator.dumpRoutes = true
 
 **.multicastForwarding = false # Multicast forwarding is handled by DYMO
-**.networkLayer.igmp.queryInterval = 60s
+**.networkLayer.igmp.queryInterval = 60s # Needed?
 
 **.dymo.clientAddresses = "" # Router is always its own client
-#**.dymo.interfaces =  # "*" string DEFAULT_METRIC_TYPE = default("HOP_COUNT"); - TODO
-**.dymo.activeInterval = 5s # 5s 2. DYMO parameter group
+**.dymo.activeInterval = 5s # 2. DYMO parameter group
 **.dymo.useMulticastRREP = false
-**.dymo.maxIdleTime = 200s # 200s MAX_IDLETIME
-**.dymo.maxSequenceNumberLifetime = 300s # 300s Used to calculate default route expiration times
-# "RREQ not received within RREQ_WAIT_TIME, RREQ_Gen may retry the Route Discovery by generating another RREQ."
-**.dymo.routeRREQWaitTime =	5s # 2s ROUTE_RREQ_WAIT_TIME
-**.dymo.rreqHolddownTime = 5s # 10s double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
-**.dymo.maxHopCount	= 20 # 20 3. DYMO parameter group #
-**.dymo.discoveryAttemptsMax = 3 # 3 string MAX_METRIC = default(""); double MAXTIME;
-**.dymo.appendInformation = true # true 4. DYMO parameter group - See DYMO.msg: AddressBlock addedNode[];
-**.dymo.bufferSizePackets = -1 # -1 BUFFER_SIZE_PACKETS
-**.dymo.bufferSizeBytes	= -1B # -1B BUFFER_SIZE_BYTES double CONTROL_TRAFFIC_LIMIT
-**.dymo.maxJitter = 10ms # 10ms DYMO extension parameters - Sampling uniform to get send delay for RteMsgs
-**.dymo.sendIntermediateRREP = true # true
-
+**.dymo.maxIdleTime = 200s # MAX_IDLETIME
+**.dymo.maxSequenceNumberLifetime = 300s # Used to calculate default route expiration times
+**.dymo.routeRREQWaitTime =	5s # ROUTE_RREQ_WAIT_TIME
+**.dymo.rreqHolddownTime = 5s # double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
+**.dymo.maxHopCount	= 20 # 3. DYMO parameter group #
+**.dymo.discoveryAttemptsMax = 3 # string MAX_METRIC = default(""); double MAXTIME;
+**.dymo.appendInformation = true # 4. DYMO parameter group - See DYMO.msg: AddressBlock addedNode[];
+**.dymo.bufferSizePackets = -1 # BUFFER_SIZE_PACKETS
+**.dymo.bufferSizeBytes	= -1B # BUFFER_SIZE_BYTES double CONTROL_TRAFFIC_LIMIT
+**.dymo.maxJitter = 10ms # DYMO extension parameters - Sampling uniform to get send delay for RteMsgs
+**.dymo.sendIntermediateRREP = true 
 **.dymo.minHopLimit	= 2	# 5 
 **.dymo.maxHopLimit	= 10 # 10
 
@@ -230,22 +216,14 @@ extends = Clusters
 					#									#
 
 [Config GroundStation]
-#extends = Clusters
 extends = DYMO
 network = GroundStation # Ignore warning
-result-dir = ./results/ground_testing/
-
-#**.physicalEnvironment**.config = xmldoc("walls.xml")
-#**.radioMedium**.obstacleLossType = "IdealObstacleLoss"
+result-dir = ./results/Testing/ground_testing/
 
 *.nodeGround**.udpApp[0].typename = "UDPSink"
 **.udpApp[*].typename = "UDPBasicApp" # All non-Ground nodes with BasicApp
 **.udpApp[*].destAddresses = "10.2.0.1" # ... No specification of prefix?
 
-**.mac.numSlots = ${NM} + 1
-
-#*.nodeGround**.mac.clusterId = ${NM} # 0..3 for masters 4 for ground 5 for slave uplink
-*.nodeGround**.radio.transmitter.communicationRange = 75m
 *.nodeGround**.mobilityType = "LinearMobility"
 *.nodeGround**.initFromDisplayString = false
 *.nodeGround**.initialX = 500m
@@ -259,7 +237,7 @@ result-dir = ./results/ground_testing/
 					#								#
 [Config MultiNIC]
 extends = GroundStation
-result-dir = ./results/multi_testing/
+result-dir = ./results/Testing/multi_testing/
 
 *.node*a**.numRadios = 2
 
@@ -268,30 +246,29 @@ result-dir = ./results/multi_testing/
 *.nodeGround[0].dymo.isGroundStation = true
 *.node**.udpApp[*].joinLocalMulticastGroups = true
 
-# NIC --- S2G ---
+# --- NIC -> S2G
 #
-# TODO: Make sure bitrate is lower than S2S radios when testing
 *.nodeGround**.wlan[0].typename = "IdealWirelessNic"
-*.nodeGround**.wlan[0].bitrate = 1Mbps
+*.nodeGround**.wlan[0].bitrate = 125kbps
 *.nodeGround**.wlan[0].mac.address = "auto"
 *.nodeGround**.wlan[0].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
-*.nodeGround**.wlan[0].mac.headerLength = 10B
+*.nodeGround**.wlan[0].mac.headerLength = 1B
 *.nodeGround**.wlan[0].mac.promiscuous = false
 *.nodeGround**.wlan[0].mac.fullDuplex = false
 *.nodeGround**.wlan[0].mac.useAck = true
-*.nodeGround**.wlan[0].mac.ackTimeout = 1s
+*.nodeGround**.wlan[0].mac.ackTimeout = 2s
 
 *.node**.wlan[1].typename = "IdealWirelessNic"
 *.node**.wlan[1].bitrate = 1Mbps
 *.node**.wlan[1].mac.address = "auto"
 *.node**.wlan[1].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
-*.node**.wlan[1].mac.headerLength = 10B
+*.node**.wlan[1].mac.headerLength = 1B
 *.node**.wlan[1].mac.promiscuous = false
 *.node**.wlan[1].mac.fullDuplex = false
 *.node**.wlan[1].mac.useAck = true
-*.node**.wlan[1].mac.ackTimeout = 1s
+*.node**.wlan[1].mac.ackTimeout = 2s
 
-# Radio
+# --- Radio
 #
 *.nodeGround**.wlan[0].radio.radioMediumModule = "radioMedium[1]"
 *.nodeGround**.wlan[0].radio.transmitter.preambleDuration = 0s
@@ -317,7 +294,7 @@ result-dir = ./results/multi_testing/
 
 [Config Orbiting]
 extends = MultiNIC
-*.node*a**.speed = 1.5mps # Calculated for realistic fly over
+*.node*a**.speed = 1.5mps # Calculated for realistic fly over (See notebook)
 
 					#									#
 					#			EnergyModelling			#
@@ -326,33 +303,75 @@ extends = MultiNIC
 # VITAL: Must differential between master, slave and S2G
 [Config EnergyModelling]
 extends = Orbiting
+result-dir = ./results/S1/baseline/
 
-*.node**.energyStorageType = "IdealEnergyStorage"
-*.node**.radio.energyConsumerType = "StateBasedEnergyConsumer"
+*.node*a**.energyStorageType = "IdealEnergyStorage"
+*.node*a**.radio.energyConsumerType = "StateBasedEnergyConsumer"
 
-*.node**.radio.energyConsumer.offPowerConsumption = 0mW
-*.node**.radio.energyConsumer.sleepPowerConsumption = 1mW
-*.node**.radio.energyConsumer.switchingPowerConsumption = 1mW
+# Slave S2S NICs (CDMA)
+*.nodeSlave*.wlan[0].radio.energyConsumer.offPowerConsumption = 0mW
+*.nodeSlave*.wlan[0].radio.energyConsumer.sleepPowerConsumption = 1mW
+*.nodeSlave*.wlan[0].radio.energyConsumer.switchingPowerConsumption = 2mW
+*.nodeSlave*.wlan[0].radio.energyConsumer.receiverIdlePowerConsumption = 25mW
+*.nodeSlave*.wlan[0].radio.energyConsumer.receiverBusyPowerConsumption = 100mW
+*.nodeSlave*.wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 225mW
+*.nodeSlave*.wlan[0].radio.energyConsumer.transmitterIdlePowerConsumption = 25mW
+*.nodeSlave*.wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 1.75W # Added for CDMA
 
-*.node**.radio.energyConsumer.receiverIdlePowerConsumption = 2mW
-*.node**.radio.energyConsumer.receiverBusyPowerConsumption = 5mW
-*.node**.radio.energyConsumer.receiverReceivingPowerConsumption = 10mW
+# Master S2S NICs (TDMA)
+*.nodeMaster*.wlan[0].radio.energyConsumer.offPowerConsumption = 0mW
+*.nodeMaster*.wlan[0].radio.energyConsumer.sleepPowerConsumption = 1mW
+*.nodeMaster*.wlan[0].radio.energyConsumer.switchingPowerConsumption = 2mW
+*.nodeMaster*.wlan[0].radio.energyConsumer.receiverIdlePowerConsumption = 25mW
+*.nodeMaster*.wlan[0].radio.energyConsumer.receiverBusyPowerConsumption = 100mW
+*.nodeMaster*.wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 200mW
+*.nodeMaster*.wlan[0].radio.energyConsumer.transmitterIdlePowerConsumption = 25mW
+*.nodeMaster*.wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 1.5W
 
-# TODO: CDMA consumes more power
-*.node**.radio.energyConsumer.transmitterIdlePowerConsumption = 2mW
-*.node**.radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
+# S2G NICs
+*.node*a*.wlan[1].radio.energyConsumer.offPowerConsumption = 0mW
+*.node*a*.wlan[1].radio.energyConsumer.sleepPowerConsumption = 1mW
+*.node*a*.wlan[1].radio.energyConsumer.switchingPowerConsumption = 2mW
+*.node*a*.wlan[1].radio.energyConsumer.receiverIdlePowerConsumption = 25mW
+*.node*a*.wlan[1].radio.energyConsumer.receiverBusyPowerConsumption = 250mW
+*.node*a*.wlan[1].radio.energyConsumer.receiverReceivingPowerConsumption = 500mW
+*.node*a*.wlan[1].radio.energyConsumer.transmitterIdlePowerConsumption = 25mW
+*.node*a*.wlan[1].radio.energyConsumer.transmitterTransmittingPowerConsumption = 3W
 
+[Config NoEnergySaving]
+extends = EnergyModelling
+result-dir = ./results/S1/no_energy_saving/
+
+*.node*a**.mac.energySavingFeatures = false
+
+# Done
 [Config CSMA]
 extends = EnergyModelling
+result-dir = ./results/S2/CSMA/
 
+# Master & Slave S2S Antennae
 *.node*a**.wlan[0].macType = "CsmaCaMac"
-
 *.node*a**.wlan[0].mac.bitrate = 2Mbps
-*.node*a**.wlan[0].mac.headerLength = 32B
+*.node*a**.wlan[0].mac.headerLength = 1B
 *.node*a**.wlan[0].mac.useMACAcks = false
 *.node*a**.wlan[0].mac.mtu = 9999999 # Ignore error
 
+# TODO: Turn all slaves into masters
 [Config TDMA]
 extends = EnergyModelling
+result-dir = ./results/S2/TDMA/
 
 *.node*a**.wlan[0].mac.pureTDMA = true
+*.nodeSlave**.wlan[0].mac.isSlave = false # Boom
+*.nodeSlave**.wlan[0].mac.clusterId = (${NM}) + ancestorIndex(2)
+*.node*a**.wlan[0].mac.numSlots = (${NM} + ${NS})
+
+*.node*a**.wlan[0].radio.transmitter.communicationRange = 125m
+*.node*a**.wlan[0].radio.transmitter.detectionRange = 125m
+
+[Config electWithEnergy]
+extends = EnergyModelling
+result-dir = ./results/S3/elect_with_energy/
+
+*.roleOracle.useEnergies = true
+*.roleOracle.energyRankWeight = ${0.1..1.0 step 0.1}
