Small scenario adjustments. Simulations experiences intermittent segmentation faults.

--- a/Simulation/OMNeT++/CubeSats/Makefile
+++ b/Simulation/OMNeT++/CubeSats/Makefile
@@ -21,6 +21,7 @@ INCLUDE_PATH = \
     -Iresults \
     -Iresults/demo_data \
     -Iresults/S1 \
+    -Iresults/S1/baseline \
     -Iresults/S1/no_energy_saving \
     -Iresults/S2 \
     -Iresults/S2/CSMA \
@@ -139,6 +140,7 @@ clean:
 	$(Q)-rm -f results/*_m.cc results/*_m.h results/*_sm.cc results/*_sm.h
 	$(Q)-rm -f results/demo_data/*_m.cc results/demo_data/*_m.h results/demo_data/*_sm.cc results/demo_data/*_sm.h
 	$(Q)-rm -f results/S1/*_m.cc results/S1/*_m.h results/S1/*_sm.cc results/S1/*_sm.h
+	$(Q)-rm -f results/S1/baseline/*_m.cc results/S1/baseline/*_m.h results/S1/baseline/*_sm.cc results/S1/baseline/*_sm.h
 	$(Q)-rm -f results/S1/no_energy_saving/*_m.cc results/S1/no_energy_saving/*_m.h results/S1/no_energy_saving/*_sm.cc results/S1/no_energy_saving/*_sm.h
 	$(Q)-rm -f results/S2/*_m.cc results/S2/*_m.h results/S2/*_sm.cc results/S2/*_sm.h
 	$(Q)-rm -f results/S2/CSMA/*_m.cc results/S2/CSMA/*_m.h results/S2/CSMA/*_sm.cc results/S2/CSMA/*_sm.h
@@ -154,7 +156,7 @@ cleanall: clean
 
 depend:
 	$(qecho) Creating dependencies...
-	$(Q)$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile -P\$$O/ -- $(MSG_CC_FILES) $(SM_CC_FILES)  ./*.cc analysis/*.cc results/*.cc results/demo_data/*.cc results/S1/*.cc results/S1/no_energy_saving/*.cc results/S2/*.cc results/S2/CSMA/*.cc results/S2/TDMA/*.cc results/S3/*.cc results/S3/elect_with_energy/*.cc results/Testing/*.cc results/Testing/ground_testing/*.cc results/Testing/multi_testing/*.cc
+	$(Q)$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile -P\$$O/ -- $(MSG_CC_FILES) $(SM_CC_FILES)  ./*.cc analysis/*.cc results/*.cc results/demo_data/*.cc results/S1/*.cc results/S1/baseline/*.cc results/S1/no_energy_saving/*.cc results/S2/*.cc results/S2/CSMA/*.cc results/S2/TDMA/*.cc results/S3/*.cc results/S3/elect_with_energy/*.cc results/Testing/*.cc results/Testing/ground_testing/*.cc results/Testing/multi_testing/*.cc
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
