--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -59,8 +59,9 @@ num-rngs = 3
 **.udpApp[*].packetName = "UDP" + substringBefore(substringAfter(fullPath(), ".node"), ".udp")
 **.udpApp[*].destPort = 5000
 **.udpApp[*].messageLength = ${ML = 128}B
-#**.udpApp[*].sendInterval = exponential(1s)
-**.udpApp[*].sendInterval  = 60s
+#**.udpApp[*].sendInterval = uniform(1s)
+**.udpApp[*].sendInterval = exponential(1s)
+#**.udpApp[*].sendInterval  = 60s
 **.udpApp[*].startTime = 0s # Time of first packet
 
 # --- NIC -> S2S
@@ -249,7 +250,7 @@ result-dir = ./results/Testing/multi_testing/
 # --- NIC -> S2G
 #
 *.nodeGround**.wlan[0].typename = "IdealWirelessNic"
-*.nodeGround**.wlan[0].bitrate = 125kbps
+*.nodeGround**.wlan[0]**.bitrate = 125kbps
 *.nodeGround**.wlan[0].mac.address = "auto"
 *.nodeGround**.wlan[0].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
 *.nodeGround**.wlan[0].mac.headerLength = 1B
@@ -259,7 +260,7 @@ result-dir = ./results/Testing/multi_testing/
 *.nodeGround**.wlan[0].mac.ackTimeout = 2s
 
 *.node**.wlan[1].typename = "IdealWirelessNic"
-*.node**.wlan[1].bitrate = 1Mbps
+*.node**.wlan[1]**.bitrate = 125kbps
 *.node**.wlan[1].mac.address = "auto"
 *.node**.wlan[1].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
 *.node**.wlan[1].mac.headerLength = 1B
@@ -344,32 +345,36 @@ result-dir = ./results/S1/no_energy_saving/
 
 *.node*a**.mac.energySavingFeatures = false
 
-# Done
+# TODO: Tune
 [Config CSMA]
 extends = EnergyModelling
 result-dir = ./results/S2/CSMA/
 
 # Master & Slave S2S Antennae
+#*.node*a**.wlan[0].macType = "CSMA" # Cannot handle multicasting
+
 *.node*a**.wlan[0].macType = "CsmaCaMac"
 *.node*a**.wlan[0].mac.bitrate = 2Mbps
 *.node*a**.wlan[0].mac.headerLength = 1B
-*.node*a**.wlan[0].mac.useMACAcks = false
+*.node*a**.wlan[0].mac.useAck = false
 *.node*a**.wlan[0].mac.mtu = 9999999 # Ignore error
+# Staggered start
+*.nodeMaster**.udpApp[*].startTime = 0s + (ancestorIndex(1) * 10ms)
+*.nodeSlave**.udpApp[*].startTime = 0s + ((ancestorIndex(1) + (${NM})) * 10ms)
 
-# TODO: Turn all slaves into masters
 [Config TDMA]
 extends = EnergyModelling
 result-dir = ./results/S2/TDMA/
 
 *.node*a**.wlan[0].mac.pureTDMA = true
 *.nodeSlave**.wlan[0].mac.isSlave = false # Boom
-*.nodeSlave**.wlan[0].mac.clusterId = (${NM}) + ancestorIndex(2)
+*.nodeSlave**.wlan[0].mac.clusterId = (${NM}) + ancestorIndex(2) 
 *.node*a**.wlan[0].mac.numSlots = (${NM} + ${NS})
 
 *.node*a**.wlan[0].radio.transmitter.communicationRange = 125m
 *.node*a**.wlan[0].radio.transmitter.detectionRange = 125m
 
-[Config electWithEnergy]
+[Config ElectWithEnergy]
 extends = EnergyModelling
 result-dir = ./results/S3/elect_with_energy/
 
