Minor edits and corrections to the Simulation chapter. The configuration of simulation scenarios finalized. Several bug fixes.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -19,7 +19,7 @@ num-rngs = 3
 
 # --- Oracle
 #
-*.roleOracle.updateFrequency = 5s # May need to increase
+*.roleOracle.updateFrequency = 2s # May need to increase
 #*.roleOracle.overloadMaster = true
 #*.roleOracle.targetMaster = 1
 
@@ -39,13 +39,13 @@ num-rngs = 3
 # --- Radio Medium
 #
 *.radioMediumType = "IdealRadioMedium"
-*.radioMedium[*].rangeFilter = "communicationRange"
+#*.radioMedium[*].rangeFilter = "communicationRange"
 #*.radioMedium[*].radioModeFilter = true
 #*.radioMedium[*].listeningFilter = true
-*.radioMedium[*].mediumLimitCache.maxTransmissionDuration= 999s
-*.radioMedium[*].mediumLimitCache.minInterferenceTime = 999s
-*.radioMedium[*].propagationType = "ConstantTimePropagation" # Doesn't affect transmission durations which is bits/bitrate
-*.radioMedium[*].**.propagationTime = 0s
+#*.radioMedium[*].mediumLimitCache.maxTransmissionDuration= 999s
+#*.radioMedium[*].mediumLimitCache.minInterferenceTime = 999s
+#*.radioMedium[*].propagationType = "ConstantTimePropagation" # Doesn't affect transmission durations which is bits/bitrate
+#*.radioMedium[*].**.propagationTime = 0s
 
 # --- Applications
 #
@@ -149,8 +149,8 @@ num-rngs = 3
 #**.udp.**.vector-recording = false
 #**.radio.**.scalar-recording = false
 #**.radio.**.vector-recording = false
-#**.radioMedium.**.scalar-recording = false
-#**.radioMedium.**.vector-recording = false
+#**.radioMedium**.scalar-recording = false
+#**.radioMedium**.vector-recording = false
 #
 #**.energyStorage.residualCapacity.vector-recording = true
 #**.udpApp[*].endToEndDelay.scalar-recording = true
@@ -295,60 +295,81 @@ result-dir = ./results/Testing/multi_testing/
 
 [Config Orbiting]
 extends = MultiNIC
+
 *.node*a**.speed = 1.5mps # Calculated for realistic fly over (See notebook)
 
 					#									#
 					#			EnergyModelling			#
 					#									#
 
-# VITAL: Must differential between master, slave and S2G
+# Scenario 1a
 [Config EnergyModelling]
 extends = Orbiting
 result-dir = ./results/S1/baseline/
+sim-time-limit = 810s
 
 *.node*a**.energyStorageType = "IdealEnergyStorage"
 *.node*a**.radio.energyConsumerType = "StateBasedEnergyConsumer"
 
-# Slave S2S NICs (CDMA)
-*.nodeSlave*.wlan[0].radio.energyConsumer.offPowerConsumption = 0mW
-*.nodeSlave*.wlan[0].radio.energyConsumer.sleepPowerConsumption = 1mW
-*.nodeSlave*.wlan[0].radio.energyConsumer.switchingPowerConsumption = 2mW
-*.nodeSlave*.wlan[0].radio.energyConsumer.receiverIdlePowerConsumption = 25mW
-*.nodeSlave*.wlan[0].radio.energyConsumer.receiverBusyPowerConsumption = 100mW
-*.nodeSlave*.wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 225mW
-*.nodeSlave*.wlan[0].radio.energyConsumer.transmitterIdlePowerConsumption = 25mW
-*.nodeSlave*.wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 1.75W # Added for CDMA
-
-# Master S2S NICs (TDMA)
+# Master S2S Interfaces (TDMA)
 *.nodeMaster*.wlan[0].radio.energyConsumer.offPowerConsumption = 0mW
 *.nodeMaster*.wlan[0].radio.energyConsumer.sleepPowerConsumption = 1mW
 *.nodeMaster*.wlan[0].radio.energyConsumer.switchingPowerConsumption = 2mW
 *.nodeMaster*.wlan[0].radio.energyConsumer.receiverIdlePowerConsumption = 25mW
 *.nodeMaster*.wlan[0].radio.energyConsumer.receiverBusyPowerConsumption = 100mW
-*.nodeMaster*.wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 200mW
+*.nodeMaster*.wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 200mW # From Gamalink
 *.nodeMaster*.wlan[0].radio.energyConsumer.transmitterIdlePowerConsumption = 25mW
-*.nodeMaster*.wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 1.5W
+*.nodeMaster*.wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 1.5W # From Gamalink
 
-# S2G NICs
+# Slave S2S Interfaces (CDMA)
+*.nodeSlave*.wlan[0].radio.energyConsumer.offPowerConsumption = 0mW
+*.nodeSlave*.wlan[0].radio.energyConsumer.sleepPowerConsumption = 1mW
+*.nodeSlave*.wlan[0].radio.energyConsumer.switchingPowerConsumption = 2mW
+*.nodeSlave*.wlan[0].radio.energyConsumer.receiverIdlePowerConsumption = 25mW
+*.nodeSlave*.wlan[0].radio.energyConsumer.receiverBusyPowerConsumption = 100mW
+*.nodeSlave*.wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 225mW # +16% for CDMA
+*.nodeSlave*.wlan[0].radio.energyConsumer.transmitterIdlePowerConsumption = 25mW
+*.nodeSlave*.wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 1.75W # +16% for CDMA
+
+# Slave and Master S2G Interfaces
 *.node*a*.wlan[1].radio.energyConsumer.offPowerConsumption = 0mW
 *.node*a*.wlan[1].radio.energyConsumer.sleepPowerConsumption = 1mW
 *.node*a*.wlan[1].radio.energyConsumer.switchingPowerConsumption = 2mW
 *.node*a*.wlan[1].radio.energyConsumer.receiverIdlePowerConsumption = 25mW
 *.node*a*.wlan[1].radio.energyConsumer.receiverBusyPowerConsumption = 250mW
-*.node*a*.wlan[1].radio.energyConsumer.receiverReceivingPowerConsumption = 500mW
+*.node*a*.wlan[1].radio.energyConsumer.receiverReceivingPowerConsumption = 500mW # Assumed
 *.node*a*.wlan[1].radio.energyConsumer.transmitterIdlePowerConsumption = 25mW
-*.node*a*.wlan[1].radio.energyConsumer.transmitterTransmittingPowerConsumption = 3W
+*.node*a*.wlan[1].radio.energyConsumer.transmitterTransmittingPowerConsumption = 3W # From EDSN/Nodes
 
+# Scenario 1b
 [Config NoEnergySaving]
 extends = EnergyModelling
 result-dir = ./results/S1/no_energy_saving/
+sim-time-limit = 810s
 
 *.node*a**.mac.energySavingFeatures = false
 
-# TODO: Tune
+[Config TDMA]
+extends = EnergyModelling
+result-dir = ./results/S2/TDMA/
+sim-time-limit = 810s
+
+*.node*a**.wlan[0].mac.pureTDMA = true
+*.nodeSlave**.wlan[0].mac.isSlave = false # Boom
+*.nodeSlave**.wlan[0].mac.clusterId = (${NM}) + ancestorIndex(2) 
+*.node*a**.wlan[0].mac.numSlots = (${NM} + ${NS})
+
+*.node*a**.wlan[0].radio.transmitter.communicationRange = 125m
+*.node*a**.wlan[0].radio.transmitter.detectionRange = 125m
+
+*.nodeSlave*.wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 200mW # +16% for CDMA
+*.nodeSlave*.wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 1.5W # +16% for CDMA
+
+# Scenario 2b
 [Config CSMA]
 extends = EnergyModelling
 result-dir = ./results/S2/CSMA/
+sim-time-limit = 810s
 
 # Master & Slave S2S Antennae
 #*.node*a**.wlan[0].macType = "CSMA" # Cannot handle multicasting
@@ -362,21 +383,11 @@ result-dir = ./results/S2/CSMA/
 *.nodeMaster**.udpApp[*].startTime = 0s + (ancestorIndex(1) * 10ms)
 *.nodeSlave**.udpApp[*].startTime = 0s + ((ancestorIndex(1) + (${NM})) * 10ms)
 
-[Config TDMA]
-extends = EnergyModelling
-result-dir = ./results/S2/TDMA/
-
-*.node*a**.wlan[0].mac.pureTDMA = true
-*.nodeSlave**.wlan[0].mac.isSlave = false # Boom
-*.nodeSlave**.wlan[0].mac.clusterId = (${NM}) + ancestorIndex(2) 
-*.node*a**.wlan[0].mac.numSlots = (${NM} + ${NS})
-
-*.node*a**.wlan[0].radio.transmitter.communicationRange = 125m
-*.node*a**.wlan[0].radio.transmitter.detectionRange = 125m
-
+# Scenario 3
 [Config ElectWithEnergy]
 extends = EnergyModelling
 result-dir = ./results/S3/elect_with_energy/
+sim-time-limit = 810s
 
 *.roleOracle.useEnergies = true
 *.roleOracle.energyRankWeight = ${0.1..1.0 step 0.1}
